--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 ---
 layout: default
 title: Web Programming
----<div class="blurb">
+---
+<div class="blurb">
           <h1>Hello Sweet World</h1>
           <p>Once upon a time, ..</p>
 </div>
