--- a/about/index.html
+++ b/about/index.html
@@ -1,1 +1,7 @@
-
+---
+layout: default
+title: Web Programming Page
+---
+<h1>{{ page.title }}</h1>
+<img src="address of the image from actual web" alt="name of the image" style="width:300px;height:250px">
+<p>yegrfyaeuireay</p>
