--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: Web Programming
+theme: jekyll-theme-cayman
 ---
 <div class="blurb">
           <h1>Hello Sweet World</h1>
